--- a/main.html
+++ b/main.html
@@ -7,7 +7,12 @@
 <body>
 <link rel = "stylesheet" href = "style.css">
 
+
+
+
+
 <center>
+
 <table cellspacing = 30px>
 	<tr>
 		<td> <div class="image" onclick = "img1 ()"> <img id = "1"> </div> </td>
@@ -20,12 +25,17 @@
 		<td> <div class="image" onclick = "img6 ()"> <img id = "6"> </div> </td>
 	</tr>
 </table>
+<div id = "scor">Clicks: 0</div>
 </center>
 
 <script src = "script.js"> </script>
-</body>
+
+
+
 
 <div id="copyright"> © Diana Ghinea 
 <br>
 	github.com/dianamin
 </div>
+
+</body>
