--- a/main.html
+++ b/main.html
@@ -15,14 +15,14 @@
 
 <table cellspacing = 30px>
 	<tr>
-		<td> <div class="image" onclick = "img1 ()"> <img id = "1"> </div> </td>
-		<td> <div class="image" onclick = "img2 ()"> <img id = "2"> </div> </td>
-		<td> <div class="image" onclick = "img3 ()"> <img id = "3"> </div> </td>
+		<td> <div class="image" onclick = "flip (0)"> <img id = "1"> </div> </td>
+		<td> <div class="image" onclick = "flip (1)"> <img id = "2"> </div> </td>
+		<td> <div class="image" onclick = "flip (2)"> <img id = "3"> </div> </td>
 	</tr>
 	<tr>
-		<td> <div class="image" onclick = "img4 ()"> <img id = "4"> </div> </td>
-		<td> <div class="image" onclick = "img5 ()"> <img id = "5"> </div> </td>
-		<td> <div class="image" onclick = "img6 ()"> <img id = "6"> </div> </td>
+		<td> <div class="image" onclick = "flip (3)"> <img id = "4"> </div> </td>
+		<td> <div class="image" onclick = "flip (4)"> <img id = "5"> </div> </td>
+		<td> <div class="image" onclick = "flip (5)"> <img id = "6"> </div> </td>
 	</tr>
 </table>
 <div id = "scor">Clicks: 0</div>
