First version done.

--- a/main.html
+++ b/main.html
@@ -12,17 +12,24 @@
 
 
 <center>
+<p id = "title"> Match </p>
 
 <table cellspacing = 30px>
 	<tr>
-		<td> <div class="image" onclick = "flip (0)"> <img id = "1"> </div> </td>
-		<td> <div class="image" onclick = "flip (1)"> <img id = "2"> </div> </td>
-		<td> <div class="image" onclick = "flip (2)"> <img id = "3"> </div> </td>
+		<td> <div class="image" onclick = "flip (0)"> <img id = "1" width = 100%> </div> </td>
+		<td> <div class="image" onclick = "flip (1)"> <img id = "2" width = 100%> </div> </td>
+		<td> <div class="image" onclick = "flip (2)"> <img id = "3" width = 100%> </div> </td>
+		<td> <div class="image" onclick = "flip (3)"> <img id = "4" width = 100%> </div> </td>
+		<td> <div class="image" onclick = "flip (4)"> <img id = "5" width = 100%> </div> </td>
+		<td> <div class="image" onclick = "flip (5)"> <img id = "6" width = 100%> </div> </td>
 	</tr>
 	<tr>
-		<td> <div class="image" onclick = "flip (3)"> <img id = "4"> </div> </td>
-		<td> <div class="image" onclick = "flip (4)"> <img id = "5"> </div> </td>
-		<td> <div class="image" onclick = "flip (5)"> <img id = "6"> </div> </td>
+		<td> <div class="image" onclick = "flip (6)"> <img id = "7" width = 100%> </div> </td>
+		<td> <div class="image" onclick = "flip (7)"> <img id = "8" width = 100%> </div> </td>
+		<td> <div class="image" onclick = "flip (8)"> <img id = "9" width = 100%> </div> </td>
+		<td> <div class="image" onclick = "flip (9)"> <img id = "10" width = 100%> </div> </td>
+		<td> <div class="image" onclick = "flip (10)"> <img id = "11" width = 100%> </div> </td>
+		<td> <div class="image" onclick = "flip (11)"> <img id = "12" width = 100%> </div> </td>
 	</tr>
 </table>
 <div id = "scor">Clicks: 0</div>
