--- a/main2.html
+++ b/main2.html
@@ -11,10 +11,11 @@
 
 <p id = "titlu"> Match </p>
 
-<table>
+<center>
+	<table cellspacing = 20px>
 
-</table>
-
+	</table>
+</center>
 
 <script src = "jQuery.js"> </script>
 <script src = "script2.js"> </script>
