Number of Clicks

--- a/main2.html
+++ b/main2.html
@@ -8,6 +8,8 @@
 <body>
 
 <link rel = "stylesheet" href = "style2.css">
+<link rel = "shortcut icon" href = "icon.png">
+
 
 <p id = "titlu"> Match </p>
 
@@ -15,6 +17,10 @@
 	<table cellspacing = 20px>
 
 	</table>
+
+	<br />
+	<p id = "clicks"> Number of clicks: 0 </p>
+
 </center>
 
 <script src = "jQuery.js"> </script>
