--- a/main2.html
+++ b/main2.html
@@ -23,6 +23,9 @@
 
 </center>
 
+<div id = "copyright"> © Diana Min </br> github.com/dianamin </div>
+
+
 <script src = "jQuery.js"> </script>
 <script src = "script2.js"> </script>
 
