--- a/main2.html
+++ b/main2.html
@@ -14,6 +14,16 @@
 <p id = "titlu"> Match </p>
 
 <center>
+
+	<div id = "query">
+		Numbers only. <br /> <br />
+		Width: <input id = "width">  </input> <br /> <br /> 
+		Height: <input id = "height"> </input>
+		<br /> <br />
+		<center> <div id = "send" onclick = "getSize ()"> Play! </div> </center>
+
+	</div>
+
 	<table cellspacing = 20px>
 
 	</table>
