--- a/main2.html
+++ b/main2.html
@@ -20,7 +20,7 @@
 		Width: <input id = "width">  </input> <br /> <br /> 
 		Height: <input id = "height"> </input>
 		<br /> <br />
-		<center> <div id = "send" onclick = "getSize ()"> Play! </div> </center>
+		<center> <div id = "send"> Play! </div> </center>
 
 	</div>
 
