--- a/main2.html
+++ b/main2.html
@@ -23,11 +23,13 @@
 		<center> <div id = "send"> Play! </div> </center>
 
 	</div>
+	<div id = "game">
 
 	<table cellspacing = 20px>
 
 	</table>
 
+	</div>
 	<br />
 	<p id = "clicks"> Number of clicks: 0 </p>
 
