Checking Cards Number

--- a/main2.html
+++ b/main2.html
@@ -17,10 +17,13 @@
 
 	<div id = "query">
 		Numbers only. <br /> <br />
-		Width: <input id = "width">  </input> <br /> <br /> 
-		Height: <input id = "height"> </input>
-		<br /> <br />
-		<center> <div id = "send"> Play! </div> </center>
+		Width: <input id = "width" placeholder = "6">  </input> <br /> <br /> 
+		Height: <input id = "height" placeholder = "2"> </input>
+		<br /> 
+		<center>
+			<p id = "error"> <br /> </p>
+			<div id = "send"> Play! </div> 
+		</center>
 
 	</div>
 	<div id = "game">
