--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<link rel = "stylesheet" href = "style2.css">
+<link rel = "stylesheet" href = "style.css">
 <link rel = "shortcut icon" href = "icon.png">
 
 
@@ -44,7 +44,7 @@
 
 
 <script src = "jQuery.js"> </script>
-<script src = "script2.js"> </script>
+<script src = "script.js"> </script>
 
 </body>
 
